src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float32__abs_float32.snap
---
source: src/expr/src/scalar/func/impls/float32.rs
expression: "#[sqlfunc(sqlname = \"abs\")]\nfn abs_float32(a: f32) -> f32 {\n    a.abs()\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct AbsFloat32;
impl crate::func::EagerUnaryFunc for AbsFloat32 {
    type Input<'a> = f32;
    type Output<'a> = f32;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        abs_float32(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for AbsFloat32 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("abs")
    }
}
fn abs_float32(a: f32) -> f32 {
    a.abs()
}
