src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float32__cast_float32_to_int64.snap
---
source: src/expr/src/scalar/func/impls/float32.rs
expression: "#[sqlfunc(\n    sqlname = \"real_to_bigint\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastInt64ToFloat32),\n    is_monotone = true\n)]\nfn cast_float32_to_int64(a: f32) -> Result<i64, EvalError> {\n    let f = round_float32(a);\n    #[allow(clippy::as_conversions)]\n    if (f >= (i64::MIN as f32)) && (f < -(i64::MIN as f32)) {\n        Ok(f as i64)\n    } else {\n        Err(EvalError::Int64OutOfRange(f.to_string().into()))\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastFloat32ToInt64;
impl crate::func::EagerUnaryFunc for CastFloat32ToInt64 {
    type Input<'a> = f32;
    type Output<'a> = Result<i64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_float32_to_int64(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastInt64ToFloat32)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastFloat32ToInt64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("real_to_bigint")
    }
}
fn cast_float32_to_int64(a: f32) -> Result<i64, EvalError> {
    let f = round_float32(a);
    #[allow(clippy::as_conversions)]
    if (f >= (i64::MIN as f32)) && (f < -(i64::MIN as f32)) {
        Ok(f as i64)
    } else {
        Err(EvalError::Int64OutOfRange(f.to_string().into()))
    }
}
